syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pinstagram.tokenservice";
option java_outer_classname = "TokenServiceProto";

service TokenService {
  rpc GetUnvalidatedToken (AccountDetails) returns (TokenResponse);
  rpc CreateAuthUser (CreateAuthUserRequest) returns (Empty);
  rpc GetAccountDetails (AccountDetailsRequest) returns (AccountDetails);
  rpc VerifyAccount (AccountDetailsRequest) returns (AccountDetails);
}

message AccountDetails {
  string id = 1;
  string email = 2;
  string name = 3;
  string username = 4;
  bool validated = 5;
}

message TokenResponse {
  string unvalidatedToken = 1;
}

message AccountDetailsRequest {
  string email = 1;
}

message CreateAuthUserRequest {
  string email = 1;
  string password = 2;
}

message Empty {

}
