syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pinstagram.tokenservice";
option java_outer_classname = "TokenServiceProto";

service TokenService {
  rpc GetUnvalidatedToken (TokenRequest) returns (UnvalidatedTokenResponse);
}

message TokenRequest {
  string id = 1;
  string email = 2;
  string name = 3;
  string username = 4;
}

message UnvalidatedTokenResponse {
  string unvalidatedToken = 1;
}